format images and add links to index.html

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
     <h1>Some of our featured CrappiCakes</h1>
     <h2>Check out these hot cakes:</h2>
-    <img src="img/barf.jpg" alt="A beautiful cupcake of BARF">
-    <img src="img/gross.jpg" alt="cakes made using open wounds">
-    <img src="img/worms.jpg" alt="maggots squirming out of chocolate cupcake">
+    <img src="img/barf.jpg" alt="A beautiful cupcake of BARF" width="50%">
+    <img src="img/gross.jpg" alt="cakes made using open wounds" width="50%">
+    <img src="img/worms.jpg" alt="maggots squirming out of chocolate cupcake" width="50%">
 
-    <h1></h1>
-    <h2></h2>
-    <p></p>
+    <h2>Here are some of our favorite Cupcake inspirations:</h2>
+    <a href="http://www.saintcupcake.com/">Saint Cupcake</a><br>
+    <a href="http://www.cupcakejones.com">Cupcake Jones</a><br>
+    <a href="https://www.toadstoolcupcakes.com/">Toadstool Cupcakes</a>
 
 
   </body>
