--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <meta charset="utf-8">
     <title>Crappy Cupcakes</title>
     </head>
   <body>
-    <h1>Welcome to Crappy Cupcakes: Cupcake Hell</h1>
+    <h1 class="flashy">Welcome to Crappy Cupcakes: Cupcake Hell</h1>
     <h2>A history of the world's crappiest cupcake</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-    <h1>Some of our featured CrappiCakes</h1>
+    <h1 class="flashy">Some of our featured CrappiCakes</h1>
     <h2>Check out these hot cakes:</h2>
-    <img src="img/barf.jpg" alt="A beautiful cupcake of BARF" width="50%">
-    <img src="img/gross.jpg" alt="cakes made using open wounds" width="50%">
-    <img src="img/worms.jpg" alt="maggots squirming out of chocolate cupcake" width="50%">
+    <img class="secondbest" src="img/barf.jpg" alt="A beautiful cupcake of BARF" width="50%">
+    <img class="bestest" src="img/gross.jpg" alt="cakes made using open wounds" width="50%">
+    <img class="secondbest" src="img/worms.jpg" alt="maggots squirming out of chocolate cupcake" width="50%">
 
-    <h2>Here are some of our favorite Cupcake inspirations:</h2>
+    <h2 class="flashy">Here are some of our favorite Cupcake inspirations:</h2>
     <a href="http://www.saintcupcake.com/">Saint Cupcake</a><br>
     <a href="http://www.cupcakejones.com">Cupcake Jones</a><br>
     <a href="https://www.toadstoolcupcakes.com/">Toadstool Cupcakes</a>
